Upgrading to Twitter Bootstrap 3 w/ external typeahead

--- a/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet"/>
-    <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/>
+    <link href="../static/css/vendor/bootstrap.min.css" rel="stylesheet"/>
+    <!--<link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet"/>
+    <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet"/>-->
     <link href="../static/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="../static/css/layout.css" rel="stylesheet"/>
     <!--[if lt IE 9]>
@@ -15,19 +16,16 @@
 
 </head>
 <body role="application">
-    <div class="navbar navbar-fixed-top">
-        <div class="navbar-inner main-navbar">
-            <ul class="navbar-thin nav">
-                <!--<li><a href="instance">Workflows</a></li>-->
-                <!--<li><a href="task">Tasks</a></li>-->
-            </ul>
-            <div class="user-information">
-                <div id="user-information-name" class="user-information-name pull-right">
-                </div>
+    <div class="navbar navbar-fixed-top main-navbar">
+        <ul class="navbar-thin nav">
+
+        </ul>
+        <div class="user-information">
+            <div id="user-information-name" class="user-information-name pull-right">
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="main-content row-fluid"></div>
     </div>
     <div class="main-footer navbar navbar-fixed-bottom">
