--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -6,7 +6,7 @@
         display: none;
     }
 }
-@media (min-width:  980px) {
+/*@media (min-width:  980px) {
     .container-fluid {
         padding-right: 50px;
         padding-left: 50px;
@@ -17,10 +17,9 @@
     }
     ul.toolbar-items,
     ul.toolbar-items-buttons {
-        margin-right: 10px !important;
-        margin-left: 30px !important;
+
     }
-}
+}*/
 
 body {
     font-size: 16px;
@@ -120,6 +119,14 @@ div.screen-footer {
     height: 30px;
 }
 
+.checkbox-menu-item label {
+    font-weight: normal;
+}
+
+.checkbox-menu-item input {
+
+}
+
 .control-group.error .checkbox {
     border: 1px solid #b94a48;
     border-radius: 4px;
@@ -154,16 +161,24 @@ div.screen-footer {
 }
 
 .main-content {
-
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .main-footer {
     background-color: whitesmoke;
+    border-top: 1px solid #CCCCCC;
+}
+
+.main-navbar {
+    background-color: whitesmoke;
+    border-bottom: 1px solid #CCCCCC;
+    height: 100px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 .main-toolbar {
-    background-color: whitesmoke;
-    height: 75px;
     overflow: visible;
     margin: 0px;
     padding: 0px 20px;
@@ -231,6 +246,56 @@ div.screen-footer {
     margin: 0px;
     padding: 0px;
     vertical-align: text-top;
+}
+
+.twitter-typeahead .tt-query,
+.twitter-typeahead .tt-hint {
+  margin-bottom: 0;
+}
+
+.tt-dropdown-menu {
+  min-width: 160px;
+  margin-top: 2px;
+  padding: 5px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0,0,0,.2);
+  *border-right-width: 2px;
+  *border-bottom-width: 2px;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+          box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  -webkit-background-clip: padding-box;
+     -moz-background-clip: padding;
+          background-clip: padding-box;
+}
+
+.tt-suggestion {
+  display: block;
+  padding: 3px 20px;
+}
+
+.tt-suggestion.tt-is-under-cursor {
+  color: #fff;
+  background-color: #0081c2;
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0)
+}
+
+.tt-suggestion.tt-is-under-cursor a {
+  color: #fff;
+}
+
+.tt-suggestion p {
+  margin: 0;
 }
 
 .search-results {
