Adjustments for responsive layout

--- a/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
@@ -24,9 +24,11 @@
             <div id="user-information-name" class="user-information-name pull-right">
             </div>
         </div>
+        <button class="btn btn-default navbar-btn navbar-toggle" type="button" data-toggle="collapse" data-target=".pw-navbar-collapse"><i class="icon-reorder"></i></button>
+
     </div>
     <div class="container">
-        <div class="main-content row-fluid"></div>
+        <div class="main-content row"></div>
     </div>
     <div class="main-footer navbar navbar-fixed-bottom">
         <div class="navbar-inner">
