--- a/web/src/main/webapp/static/js/templates/form/field-file.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-file.hbs
@@ -1,7 +1,8 @@
 {{#if label}}
 <label>{{label}}</label>
 {{/if}}
-<input type="{{type}}"
+<input class="form-control"
+       type="{{type}}"
        name="{{name}}"
        maxlength="{{maxValueLength}}"
        size="{{displayValueLength}}"
