--- a/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-toolbar.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="">
+    <div class="row">
         <form class="nav-collapse collapse navbar-responsive-collapse pw-navbar-collapse navbar-form form-inline pull-left" style="padding-right: 5px">
             <input style="width:200px" title="Search by keyword" role="" class="form-control searchField" name="keyword" placeholder="Search" id="keyword" type="text">
             <button class="btn btn-default" role="button" id="instanceSearchButton" type="submit" data-loading-text="&nbsp;&nbsp;<i class='icon-spinner icon-spin icon-large'></i>&nbsp;&nbsp;">&nbsp;&nbsp;<i class="icon-search"></i>&nbsp;&nbsp;</button>
@@ -37,10 +37,10 @@
             </div>
             <div class="modal-body">
                 <p>Reactivating a process resumes execution.</p>
-                <textarea class="input-block-level" placeholder="Enter a reason" name="reason" id="activate-reason" rows="4"></textarea>
+                <textarea class="form-control input-block-level" placeholder="Enter a reason" name="reason" id="activate-reason" rows="4"></textarea>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancel</button>
                 <button type="button" id="activate-button" class="btn btn-primary">Activate</button>
             </div>
         </div>
