--- a/web/src/main/webapp/static/js/templates/form/field-listbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-listbox.hbs
@@ -2,7 +2,7 @@
 <label>{{label}}</label>
 {{/if}}
 <select name="{{name}}"
-    {{#if required}}class="required"{{/if}}>
+    {{#if required}}class="form-control required"{{else}}class="form-control"{{/if}}>
     {{#if options}}
         {{#each options}}
             <option value="{{value}}"
