--- a/web/src/main/webapp/static/js/templates/form/field-textarea.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-textarea.hbs
@@ -1,7 +1,7 @@
 {{#if label}}
 <label for="{{fieldId}}">{{label}}</label>
 {{/if}}
-<textarea id="{{fieldId}}" name="{{name}}" maxlength="{{maxValueLength}}" rows="5" cols="80"
+<textarea id="{{fieldId}}" class="form-control" name="{{name}}" maxlength="{{maxValueLength}}" rows="5" cols="80"
 {{#if defaultValue}}placeholder="{{defaultValue}}"{{/if}}
 {{#if required}}class="required"{{/if}}
 </textarea>
