--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -1,46 +1,110 @@
-<ul class="toolbar-items">
-    <li class="nav">
+<div class="container">
+    <div class="row">
         {{#if task}}
-            <button class="btn" id="suspend-button" title="Suspend process"><i class="icon-off"></i></button>
-            <button class="btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process"><i class=" icon-trash"></i></button>
+            {{#if task.active}}
+                 <button class="btn btn-default navbar-btn" id="suspend-dialog-button" data-target="#suspend-dialog" data-backdrop="false" data-toggle="modal" title="Suspend process" type="button"><i class="icon-pause icon-white"></i></button>
+                 <button class="btn btn-danger navbar-btn incomplete-selected-result-btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
+            {{else}}
+                 <button class="btn btn-default navbar-btn" id="activate-dialog-button" data-target="#activate-dialog" data-backdrop="false" data-toggle="modal" title="Activate process" type="button"><i class="icon-play icon-white"></i></button>
+            {{/if}}
         {{/if}}
-    </li>
-    <li class="nav pull-right">
-        {{#if task}}
-            <a class="btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment"></i></a>
-            <button class="btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;<span id="attachment-count">{{attachmentCount}}</span></button>
-        {{/if}}
+        <div class="selected-buttons">
+            {{#if task.active}}
+                <a class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment"></i></a>
+                <button class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;<span id="attachment-count">{{attachmentCount}}</span></button>
+            {{/if}}
 
-        <button class="btn" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></button>
-    </li>
-</ul>
-
-<div id="comment-dialog" class="modal hide fade">
-    <div class="modal-body">
-        <textarea class="input-block-level" placeholder="Enter a comment" name="comment" id="attach-comment" rows="4"></textarea>
-        <button class="btn" id="file-button"><i class="icon-file"></i></button>
-        <input type="file" name="attachment" class="attach-file hide"/>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-        <button type="button" id="attach-button" class="btn btn-primary">Attach</button>
+            <button class="btn btn-default navbar-btn" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></button>
+        </div>
     </div>
 </div>
 
-<div id="delete-dialog" class="modal hide fade">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Are you sure you want to delete this process?</h3>
-    </div>
-    <div class="modal-body">
-        <p>Deleting a process <b>permanently</b> stops execution and <u>cannot</u> be reversed.</p>
-        <textarea class="input-block-level" placeholder="Enter a reason" name="reason" id="delete-reason" rows="4"></textarea>
-    </div>
-    <div class="modal-footer">
-        <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
-        <button type="button" id="delete-button" class="btn btn-danger">Delete</button>
+<div id="activate-dialog" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Are you sure you want to reactivate this process?</h4>
+            </div>
+            <div class="modal-body">
+                <p>Reactivating a process resumes execution.</p>
+                <textarea class="form-control input-block-level" placeholder="Enter a reason" name="reason" id="activate-reason" rows="4"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                <button type="button" id="activate-button" class="btn btn-primary">Activate</button>
+            </div>
+        </div>
     </div>
 </div>
 
+<div id="comment-dialog" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                <textarea class="input-block-level" placeholder="Enter a comment" name="comment" id="attach-comment" rows="4"></textarea>
+                <button class="btn" id="file-button"><i class="icon-file"></i></button>
+                <input type="file" name="attachment" class="attach-file hide"/>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                <button type="button" id="attach-button" class="btn btn-primary">Attach</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div id="delete-dialog" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Are you sure you want to delete this process?</h4>
+            </div>
+            <div class="modal-body">
+                <p>Deleting a process <b>permanently</b> stops execution and <u>cannot</u> be reversed.</p>
+                <textarea class="form-control input-block-level" placeholder="Enter a reason" name="reason" id="delete-reason" rows="4"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                <button type="button" class="btn btn-danger" id="delete-button">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
 
+<div id="history-dialog" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">History</h4>
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="suspend-dialog" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Are you sure you want to suspend this process?</h4>
+            </div>
+            <div class="modal-body">
+                <p>Suspending a process pauses execution.</p>
+                <textarea class="form-control input-block-level" placeholder="Enter a reason" name="reason" id="suspend-reason" rows="4"></textarea>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                <button type="button" id="suspend-button" class="btn btn-primary">Suspend</button>
+            </div>
+        </div>
+    </div>
+</div>
