Fix to back button

--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -14,10 +14,10 @@
                 <button class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;<span id="attachment-count">{{attachmentCount}}</span></button>
             {{/if}}
 
-            <button class="btn btn-default navbar-btn" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></button>
+            <a class="btn btn-default navbar-btn" href="{{root}}.html" rel="external" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></a>
         </div>
     </div>
-</div>
+</div>                                                                                                                    s
 
 <div id="activate-dialog" class="modal fade">
     <div class="modal-dialog">
